--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
     <p>Please answer the following questions to help us assess your current security posture for CIS Control 1. You can also add comments to provide additional context.</p>
 
     <form id="control1Form">
-        <!-- Question 1 (with checkboxes for known frameworks) -->
+        <!-- Question 1.1 (with checkboxes for known frameworks) -->
         <div>
-            <label>Which of the following security frameworks have you implemented? (Select all that apply)</label><br>
+            <label>1.1 Which of the following security frameworks have you implemented? (Select all that apply)</label><br>
             <label><input type="checkbox" name="q1" value="Cyber Essentials"> Cyber Essentials</label><br>
             <label><input type="checkbox" name="q1" value="NHS DSP Toolkit"> NHS DSP Toolkit</label><br>
             <label><input type="checkbox" name="q1" value="Cyber Essentials Plus"> Cyber Essentials Plus</label><br>
@@ -71,15 +71,15 @@
             <label><input type="checkbox" name="q1" value="DORA"> DORA (Digital Operational Resilience Act)</label><br>
         </div>
 
-        <!-- Comments for Question 1 -->
+        <!-- Comments for Question 1.1 -->
         <div class="comment">
             <label for="q1Comments">Add comments or context to your answer (optional):</label>
             <textarea id="q1Comments" name="q1Comments" placeholder="Provide additional context here..."></textarea>
         </div>
 
-        <!-- Question 2 -->
+        <!-- Question 1.2 -->
         <div>
-            <label for="q2">Do you maintain an updated inventory of all hardware assets?</label>
+            <label for="q2">1.2 Do you maintain an updated inventory of all hardware assets?</label>
             <select id="q2" name="q2">
                 <option value="1">We have no centralised inventory of hardware assets.</option>
                 <option value="2">We maintain a basic, informal list of some hardware assets.</option>
@@ -89,13 +89,47 @@
             </select>
         </div>
 
-        <!-- Comments for Question 2 -->
+        <!-- Comments for Question 1.2 -->
         <div class="comment">
             <label for="q2Comments">Add comments or context to your answer (optional):</label>
             <textarea id="q2Comments" name="q2Comments" placeholder="Provide additional context here..."></textarea>
         </div>
 
-        <!-- Add more questions and comments here -->
+        <!-- Question 1.3 -->
+        <div>
+            <label for="q3">1.3 Do you have policies for managing unauthorised hardware?</label>
+            <select id="q3" name="q3">
+                <option value="1">We do not have processes to detect or manage unauthorised hardware.</option>
+                <option value="2">We have ad-hoc policies, but they are rarely enforced.</option>
+                <option value="3">We detect unauthorised hardware, but enforcement is inconsistent.</option>
+                <option value="4">We detect and respond to unauthorised hardware through automated tools.</option>
+                <option value="5">We have a fully automated system that detects, isolates, and removes unauthorised hardware in real-time.</option>
+            </select>
+        </div>
+
+        <!-- Comments for Question 1.3 -->
+        <div class="comment">
+            <label for="q3Comments">Add comments or context to your answer (optional):</label>
+            <textarea id="q3Comments" name="q3Comments" placeholder="Provide additional context here..."></textarea>
+        </div>
+
+        <!-- Question 1.4 -->
+        <div>
+            <label for="q4">1.4 Do you have a documented onboarding process for hardware?</label>
+            <select id="q4" name="q4">
+                <option value="1">There is no formal onboarding process for new hardware.</option>
+                <option value="2">New hardware is configured manually, with no formal documentation or security check.</option>
+                <option value="3">We have a partially documented process that includes security checks for new hardware.</option>
+                <option value="4">We have a documented and secure onboarding process for most hardware.</option>
+                <option value="5">We have a fully documented and enforced onboarding process for all hardware, including security checks.</option>
+            </select>
+        </div>
+
+        <!-- Comments for Question 1.4 -->
+        <div class="comment">
+            <label for="q4Comments">Add comments or context to your answer (optional):</label>
+            <textarea id="q4Comments" name="q4Comments" placeholder="Provide additional context here..."></textarea>
+        </div>
 
         <button type="submit">Submit</button>
     </form>
@@ -112,16 +146,6 @@
             const q1Comments = document.getElementById('q1Comments').value;
             const q2 = document.getElementById('q2').value;
             const q2Comments = document.getElementById('q2Comments').value;
-
-            alert(`You selected: 
-            Frameworks: ${selectedFrameworks.join(', ')} 
-            Comments for Q1: ${q1Comments}
-            Q2: ${q2} with comments: ${q2Comments}`);
-
-            // Add logic for report generation or handling the form data here
-        });
-    </script>
-</body>
-</html>
-
-
+            const q3 = document.getElementById('q3').value;
+            const q3Comments = document.getElementById('q3Comments').value;
+            const q4 = document.getElementById('q4').
