--- a/index.html
+++ b/index.html
@@ -24,24 +24,26 @@
         h2 {
             color: teal;
         }
-        p {
-            color: #333;
+        p, label {
+            color: #333; /* Text and input color match */
         }
         label {
             font-size: 14px;
-            color: #333;
-            display: block;
             margin-bottom: 10px;
         }
         .input-field, input[type="checkbox"], select, textarea {
-            width: 95%; /* Adjusted for a cleaner look */
-            max-width: 600px; /* Limit field width */
+            width: 95%;
+            max-width: 600px;
             margin-top: 5px;
             margin-bottom: 15px;
             padding: 10px;
             border: 1px solid teal;
             border-radius: 4px;
+            color: #333; /* Input text color */
             box-sizing: border-box;
+        }
+        input[type="checkbox"] {
+            width: auto; /* Checkbox size adjustment */
         }
         button {
             padding: 12px 30px;
@@ -63,16 +65,19 @@
         .question-number {
             font-weight: bold;
         }
+        .checkbox-group label {
+            display: block;
+            margin-left: 0; /* Left-justify checkboxes */
+        }
         @media (max-width: 768px) {
-            /* Mobile adjustments */
             form {
                 padding: 15px;
             }
             .input-field, select, textarea {
-                width: 100%; /* Full width for mobile */
+                width: 100%;
             }
             button {
-                width: 100%; /* Full width button for mobile */
+                width: 100%;
             }
         }
     </style>
@@ -85,17 +90,17 @@
     <p>Please answer the following questions to help us assess your current security posture for CIS Control 1. You can also add comments to provide additional context.</p>
 
     <form id="control1Form">
-        <!-- Question 1.1 (with checkboxes for known frameworks) -->
-        <div>
+        <!-- Question 1.1 (with checkboxes for known frameworks, left-aligned) -->
+        <div class="checkbox-group">
             <label><span class="question-number">1)</span> Which of the following security frameworks have you implemented? (Select all that apply)</label>
-            <label><input type="checkbox" name="q1" value="Cyber Essentials"> Cyber Essentials</label><br>
-            <label><input type="checkbox" name="q1" value="NHS DSP Toolkit"> NHS DSP Toolkit</label><br>
-            <label><input type="checkbox" name="q1" value="Cyber Essentials Plus"> Cyber Essentials Plus</label><br>
-            <label><input type="checkbox" name="q1" value="PCI DSS"> PCI DSS</label><br>
-            <label><input type="checkbox" name="q1" value="CIS Controls"> CIS Controls</label><br>
-            <label><input type="checkbox" name="q1" value="NIST"> NIST</label><br>
-            <label><input type="checkbox" name="q1" value="ISO 27001"> ISO 27001</label><br>
-            <label><input type="checkbox" name="q1" value="DORA"> DORA (Digital Operational Resilience Act)</label><br>
+            <label><input type="checkbox" name="q1" value="Cyber Essentials"> Cyber Essentials</label>
+            <label><input type="checkbox" name="q1" value="NHS DSP Toolkit"> NHS DSP Toolkit</label>
+            <label><input type="checkbox" name="q1" value="Cyber Essentials Plus"> Cyber Essentials Plus</label>
+            <label><input type="checkbox" name="q1" value="PCI DSS"> PCI DSS</label>
+            <label><input type="checkbox" name="q1" value="CIS Controls"> CIS Controls</label>
+            <label><input type="checkbox" name="q1" value="NIST"> NIST</label>
+            <label><input type="checkbox" name="q1" value="ISO 27001"> ISO 27001</label>
+            <label><input type="checkbox" name="q1" value="DORA"> DORA (Digital Operational Resilience Act)</label>
             <label><input type="checkbox" name="q1" value="Other"> Other (please expand)</label>
         </div>
 
@@ -164,14 +169,27 @@
 
     <script>
         document.getElementById('control1Form').addEventListener('submit', function (e) {
-            e.preventDefault(); // Prevent form refresh
-            
-            // Capture the checkbox answers
-            const selectedFrameworks = [];
-            document.querySelectorAll('input[name="q1"]:checked').forEach((checkbox) => {
-                selectedFrameworks.push(checkbox.value);
-            });
-            const q1Comments = document.getElementById('q1Comments').value;
-            const q2 = document.getElementById('q2').value;
-            const q2Comments = document.getElementById('q2Comments').value;
-            const q3 = document
+    e.preventDefault(); // Prevent form refresh
+    
+    // Capture the checkbox answers
+    const selectedFrameworks = [];
+    document.querySelectorAll('input[name="q1"]:checked').forEach((checkbox) => {
+        selectedFrameworks.push(checkbox.value);
+    });
+    const q1Comments = document.getElementById('q1Comments').value;
+    const q2 = document.getElementById('q2').value;
+    const q2Comments = document.getElementById('q2Comments').value;
+    const q3 = document.getElementById('q3').value;
+    const q3Comments = document.getElementById('q3Comments').value;
+    const q4 = document.getElementById('q4').value;
+    const q4Comments = document.getElementById('q4Comments').value;
+
+    // Complete the alert to display all the selections
+    alert(`You selected:
+    Frameworks: ${selectedFrameworks.join(', ')}
+    Comments for Q1: ${q1Comments}
+    Q2: ${q2} with comments: ${q2Comments}
+    Q3: ${q3} with comments: ${q3Comments}
+    Q4: ${q4} with comments: ${q4Comments}`);
+});
+
