--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CIS Control 1 Form</title>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script> <!-- Include Chart.js for the graph -->
     <style>
         body {
             font-family: Roboto, sans-serif;
@@ -25,7 +26,7 @@
             color: teal;
         }
         p, label {
-            color: #333; /* Text and input color match */
+            color: #333;
         }
         label {
             font-size: 14px;
@@ -39,11 +40,8 @@
             padding: 10px;
             border: 1px solid teal;
             border-radius: 4px;
-            color: #333; /* Input text color */
+            color: #333;
             box-sizing: border-box;
-        }
-        input[type="checkbox"] {
-            width: auto; /* Checkbox size adjustment */
         }
         button {
             padding: 12px 30px;
@@ -67,30 +65,30 @@
         }
         .checkbox-group label {
             display: block;
-            margin-left: 0; /* Left-justify checkboxes */
+            margin-left: 0;
         }
-        @media (max-width: 768px) {
-            form {
-                padding: 15px;
-            }
-            .input-field, select, textarea {
-                width: 100%;
-            }
-            button {
-                width: 100%;
-            }
+        .version-number {
+            position: absolute;
+            top: 10px;
+            right: 10px;
+            font-size: 6pt;
+            color: #666;
         }
     </style>
 </head>
 <body>
+
+    <!-- Version number -->
+    <div class="version-number">v1.0</div>
 
     <!-- Master heading and instructions -->
     <h1>ClearMap Cybersecurity Gap Analysis</h1>
     <h2>CIS Control 1: Inventory and Control of Enterprise Assets</h2>
     <p>Please answer the following questions to help us assess your current security posture for CIS Control 1. You can also add comments to provide additional context.</p>
 
+    <!-- The form structure -->
     <form id="control1Form">
-        <!-- Question 1.1 (with checkboxes for known frameworks, left-aligned) -->
+        <!-- Question 1.1 (with checkboxes for known frameworks) -->
         <div class="checkbox-group">
             <label><span class="question-number">1)</span> Which of the following security frameworks have you implemented? (Select all that apply)</label>
             <label><input type="checkbox" name="q1" value="Cyber Essentials"> Cyber Essentials</label>
@@ -164,11 +162,13 @@
             <textarea id="q4Comments" name="q4Comments" class="input-field" placeholder="Provide additional context here..."></textarea>
         </div>
 
+        <!-- Submit button -->
         <button type="submit">Submit</button>
     </form>
 
-    <script>
-        <script>
+    <!-- Graph section -->
+    <canvas id="radialChart" width="400" height="400"></canvas>
+<script>
 document.getElementById('control1Form').addEventListener('submit', function (e) {
     e.preventDefault(); // Prevent form refresh
     
@@ -205,8 +205,43 @@ document.getElementById('control1Form').addEventListener('submit', function (e) 
         <p><strong>For Onboarding:</strong> Consider documenting a formal onboarding process to ensure all new hardware is secured before deployment.</p>
     `;
     
-    // Append the report to the body or a specific element
+    // Append the report to the body
     document.body.appendChild(reportDiv);
+
+    // Generate graph data
+    const labels = ['Inventory', 'Unauthorised Hardware', 'Onboarding'];
+    const data = {
+        labels: labels,
+        datasets: [{
+            label: 'Compliance Score',
+            data: [q2, q3, q4], // Data based on the user's selections
+            backgroundColor: ['#FF6384', '#FFCE56', '#36A2EB'],
+            borderColor: ['#FF6384', '#FFCE56', '#36A2EB'],
+            borderWidth: 1
+        }]
+    };
+
+    // Chart configuration
+    const config = {
+        type: 'radar',
+        data: data,
+        options: {
+            scales: {
+                r: {
+                    min: 1,
+                    max: 5
+                }
+            }
+        }
+    };
+
+    // Render the chart
+    const radialChart = new Chart(
+        document.getElementById('radialChart'),
+        config
+    );
 });
 </script>
+</body>
+</html>
 
