--- a/index.html
+++ b/index.html
@@ -1,183 +1,24 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CIS Control 1 Form</title>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script> <!-- Include Chart.js for the graph -->
-    <style>
-        body {
-            font-family: Roboto, sans-serif;
-            background-color: #f4f4f4;
-            padding: 20px;
-        }
-        form {
-            background-color: #fff;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-            max-width: 800px;
-            margin: 0 auto;
-        }
-        h1 {
-            color: coral;
-        }
-        h2 {
-            color: teal;
-        }
-        p, label {
-            color: #333;
-        }
-        label {
-            font-size: 14px;
-            margin-bottom: 10px;
-        }
-        .input-field, input[type="checkbox"], select, textarea {
-            width: 95%;
-            max-width: 600px;
-            margin-top: 5px;
-            margin-bottom: 15px;
-            padding: 10px;
-            border: 1px solid teal;
-            border-radius: 4px;
-            color: #333;
-            box-sizing: border-box;
-        }
-        button {
-            padding: 12px 30px;
-            background-color: coral;
-            color: white;
-            border: none;
-            cursor: pointer;
-            border-radius: 4px;
-            font-size: 16px;
-            display: block;
-            margin: 20px auto;
-        }
-        button:hover {
-            background-color: darkred;
-        }
-        .comment {
-            margin-bottom: 20px;
-        }
-        .question-number {
-            font-weight: bold;
-        }
-        .checkbox-group label {
-            display: block;
-            margin-left: 0;
-        }
-        .version-number {
-            position: absolute;
-            top: 10px;
-            right: 10px;
-            font-size: 6pt;
-            color: #666;
-        }
-        .report-section {
-            margin-top: 20px;
-            padding: 20px;
-            background-color: #f9f9f9;
-            border: 1px solid #ddd;
-            border-radius: 8px;
-        }
-        .report-section h3 {
-            margin-bottom: 10px;
-            color: teal;
-        }
-        .risk-color {
-            font-weight: bold;
-        }
-    </style>
-</head>
-<body>
+    <!-- Graph section -->
+    <canvas id="radialChart" width="400" height="400"></canvas>
 
-    <!-- Version number -->
-    <div class="version-number">v1.0</div>
+    <script>
+    document.getElementById('control1Form').addEventListener('submit', function (e) {
+        e.preventDefault(); // Prevent form refresh
 
-    <!-- Master heading and instructions -->
-    <h1>ClearMap Cybersecurity Gap Analysis</h1>
-    <h2>CIS Control 1: Inventory and Control of Enterprise Assets</h2>
-    <p>Please answer the following questions to help us assess your current security posture for CIS Control 1. You can also add comments to provide additional context.</p>
+        // Capture the checkbox answers for frameworks
+const selectedFrameworks = [];
+document.querySelectorAll('input[name="q1"]:checked').forEach((checkbox) => {
+    selectedFrameworks.push(checkbox.value);
+});
+const q1Comments = document.getElementById('q1Comments').value;
+const q2 = document.getElementById('q2').value;
+const q2Comments = document.getElementById('q2Comments').value;
+const q3 = document.getElementById('q3').value;
+const q3Comments = document.getElementById('q3Comments').value;
+const q4 = document.getElementById('q4').value;
+const q4Comments = document.getElementById('q4Comments').value;
 
-    <!-- The form structure -->
-    <form id="control1Form">
-        <!-- Question 1.1 (with checkboxes for known frameworks) -->
-        <div class="checkbox-group">
-            <label><span class="question-number">1)</span> Which of the following security frameworks have you implemented? (Select all that apply)</label>
-            <label><input type="checkbox" name="q1" value="Cyber Essentials"> Cyber Essentials</label>
-            <label><input type="checkbox" name="q1" value="NHS DSP Toolkit"> NHS DSP Toolkit</label>
-            <label><input type="checkbox" name="q1" value="Cyber Essentials Plus"> Cyber Essentials Plus</label>
-            <label><input type="checkbox" name="q1" value="PCI DSS"> PCI DSS</label>
-            <label><input type="checkbox" name="q1" value="CIS Controls"> CIS Controls</label>
-            <label><input type="checkbox" name="q1" value="NIST"> NIST</label>
-            <label><input type="checkbox" name="q1" value="ISO 27001"> ISO 27001</label>
-            <label><input type="checkbox" name="q1" value="DORA"> DORA (Digital Operational Resilience Act)</label>
-            <label><input type="checkbox" name="q1" value="Other"> Other (please expand)</label>
-        </div>
-
-        <!-- Comments for Question 1.1 -->
-        <div class="comment">
-            <label for="q1Comments">Add comments or context to your answer (optional):</label>
-            <textarea id="q1Comments" name="q1Comments" class="input-field" placeholder="Provide additional context here..."></textarea>
-        </div>
-
-        <!-- Question 1.2 -->
-        <div>
-            <label for="q2"><span class="question-number">2)</span> Do you maintain an updated inventory of all hardware assets?</label>
-            <select id="q2" name="q2" class="input-field">
-                <option value="1">We have no centralised inventory of hardware assets.</option>
-                <option value="2">We maintain a basic, informal list of some hardware assets.</option>
-                <option value="3">We maintain an inventory, but it is updated only during periodic audits.</option>
-                <option value="4">We maintain an automated, centralised hardware inventory.</option>
-                <option value="5">We have a comprehensive, automated inventory that tracks all hardware assets in real-time.</option>
-            </select>
-        </div>
-
-        <!-- Comments for Question 1.2 -->
-        <div class="comment">
-            <label for="q2Comments">Add comments or context to your answer (optional):</label>
-            <textarea id="q2Comments" name="q2Comments" class="input-field" placeholder="Provide additional context here..."></textarea>
-        </div>
-
-        <!-- Question 1.3 -->
-        <div>
-            <label for="q3"><span class="question-number">3)</span> Do you have policies for managing unauthorised hardware?</label>
-            <select id="q3" name="q3" class="input-field">
-                <option value="1">We do not have processes to detect or manage unauthorised hardware.</option>
-                <option value="2">We have ad-hoc policies, but they are rarely enforced.</option>
-                <option value="3">We detect unauthorised hardware, but enforcement is inconsistent.</option>
-                <option value="4">We detect and respond to unauthorised hardware through automated tools.</option>
-                <option value="5">We have a fully automated system that detects, isolates, and removes unauthorised hardware in real-time.</option>
-            </select>
-        </div>
-
-        <!-- Comments for Question 1.3 -->
-        <div class="comment">
-            <label for="q3Comments">Add comments or context to your answer (optional):</label>
-            <textarea id="q3Comments" name="q3Comments" class="input-field" placeholder="Provide additional context here..."></textarea>
-        </div>
-
-        <!-- Question 1.4 -->
-        <div>
-            <label for="q4"><span class="question-number">4)</span> Do you have a documented onboarding process for hardware?</label>
-            <select id="q4" name="q4" class="input-field">
-                <option value="1">There is no formal onboarding process for new hardware.</option>
-                <option value="2">New hardware is configured manually, with no formal documentation or security check.</option>
-                <option value="3">We have a partially documented process that includes security checks for new hardware.</option>
-                <option value="4">We have a documented and secure onboarding process for most hardware.</option>
-                <option value="5">We have a fully documented and enforced onboarding process for all hardware, including security checks.</option>
-            </select>
-        </div>
-
-        <!-- Comments for Question 1.4 -->
-        <div class="comment">
-            <label for="q4Comments">Add comments or context to your answer (optional):</label>
-            <textarea id="q4Comments" name="q4Comments" class="input-field" placeholder="Provide additional context here..."></textarea>
-        </div>
-
-        <button type="submit">Submit</button>
-    </form>
+// Now you can use these values in your report or graph
 
     <!-- Graph section -->
     <canvas id="radialChart" width="400" height="400"></canvas>
@@ -232,12 +73,12 @@
 
         // Chart configuration
         const config = {
-            type: 'bar', // Bar chart for easier visual representation
+            type: 'radar', // Radial chart as requested
             data: chartData,
             options: {
                 scales: {
-                    y: {
-                        min: 1,
+                    r: {
+                        min: 0,
                         max: 5
                     }
                 }
@@ -251,6 +92,14 @@
         );
     });
     </script>
+<!-- Your existing script for the graph and report -->
+
+    </script>
+
+<!-- Version number at the bottom -->
+<div class="version-number-bottom" style="text-align: center; font-size: 6pt; color: #666; margin-top: 20px;">
+    v1.0
+</div>
 
 </body>
 </html>
