--- a/index.html
+++ b/index.html
@@ -85,17 +85,19 @@ const q4Comments = document.getElementById('q4Comments').value;
             }
         };
 
-        // Render the chart
+            // Render the chart
         const radialChart = new Chart(
             document.getElementById('radialChart'),
             config
         );
     });
     </script>
+</body>
+</html>
 
 <!-- Version number at the bottom -->
 <div class="version-number-bottom" style="text-align: center; font-size: 6pt; color: #666; margin-top: 20px;">
-    v2.0
+    v10.0
 </div>
 
 </body>
