--- a/index.html
+++ b/index.html
@@ -186,20 +186,62 @@
         const q4Comments = document.getElementById('q4Comments').value;
 
         // Display the report after form submission
-        const reportDiv = document.createElement('div');
-        reportDiv.classList.add('report-section');
-        reportDiv.innerHTML = `
-            <h3>Your Report</h3>
-            <p><strong>Selected Frameworks:</strong> ${selectedFrameworks.join(', ')}</p>
-            <p><strong>Comments for Q1:</strong> ${q1Comments}</p>
-            <h3>Advisories</h3>
-            <p><strong>For Frameworks:</strong> Based on your selected frameworks, consider implementing formal security controls for all listed frameworks.</p>
-            <p><strong>For Inventory:</strong> Automate your inventory tracking for real-time visibility.</p>
-            <p><strong>For Unauthorised Hardware:</strong> Implement faster detection with automated tools.</p>
-            <p><strong>For Onboarding:</strong> Establish formal security processes for hardware onboarding.</p>
-        `;
-        document.body.appendChild(reportDiv);
+        // Display the report after form submission
+function displayReport() {
+    const reportHTML = `
+        <table>
+          <thead>
+            <tr>
+              <th>Risk Score</th>
+              <th>Area</th>
+              <th>Requirement</th>
+              <th>Current Position</th>
+              <th>Advisory</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr style="background-color: ${getBackgroundColor(riskScore1)};">
+              <td>${riskScore1}</td> <!-- Replace dynamically -->
+              <td>1.1 Inventory Tools</td>
+              <td>A comprehensive, automated inventory tool must be in place to track all assets.</td>
+              <td>${userResponse1}</td> <!-- Replace with user's response -->
+              <td>You currently lack an automated tool. Implement ${recommendedTool1} for real-time tracking of all devices, reducing risk. Without it, you may miss critical updates or vulnerabilities. Consider tools like Microsoft SCCM, etc.</td>
+            </tr>
+            <tr style="background-color: ${getBackgroundColor(riskScore2)};">
+              <td>${riskScore2}</td>
+              <td>1.2 Asset Identification</td>
+              <td>All enterprise assets should be clearly identified and categorized.</td>
+              <td>${userResponse2}</td>
+              <td>Assets aren’t fully categorized. Ensure every device is categorized by type, owner, and usage to improve security posture. Use solutions that integrate with existing systems.</td>
+            </tr>
+            <tr style="background-color: ${getBackgroundColor(riskScore3)};">
+              <td>${riskScore3}</td>
+              <td>1.3 Routine Audits</td>
+              <td>Regular audits must be scheduled to ensure asset lists remain accurate.</td>
+              <td>${userResponse3}</td>
+              <td>Conduct regular audits. Implement quarterly reviews with tools that automate the process, ensuring no rogue devices are overlooked. Consider audit automation options.</td>
+            </tr>
+            <tr style="background-color: ${getBackgroundColor(riskScore4)};">
+              <td>${riskScore4}</td>
+              <td>1.4 Asset Decommissioning</td>
+              <td>A formal process for decommissioning old or unused assets must be in place.</td>
+              <td>${userResponse4}</td>
+              <td>Without a decommissioning process, there’s risk of exploitation. Set a secure process for decommissioning devices, ensuring data is wiped and devices are tracked.</td>
+            </tr>
+          </tbody>
+        </table>
+    `;
+    document.getElementById("reportContainer").innerHTML = reportHTML; // Assuming the report goes into a div with this ID
+}
 
+// Function to get background color based on risk score
+function getBackgroundColor(score) {
+    if (score === 1) return "#FFCCCB"; // Bright red
+    if (score === 2) return "#FF5733"; // Red amber
+    if (score === 3) return "#FFC107"; // Amber
+    if (score === 4) return "#90EE90"; // Amber green
+    if (score === 5) return "#32CD32"; // Green
+}
         // Generate graph data
         const data = [q2, q3, q4];
         const colors = ['#FF0000', '#FF9900', '#00FF00']; // Red, Amber, Green for poor to good posture
